--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
+    <head>
+        <meta charset="UTF-8">
+        <title>真夏のひまわり畑 - FOREST STUDIO</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
 
-<head>
-    <meta charset="UTF-8">
-    <title>真夏のひまわり畑-FOREST STUDIO</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-</head>
+        <header>
+            <h1>FOREST STUDIO</h1>
+        </header>
 
-<body>
-    <header>
-        <h1>Forest Studio</h1>
-    </header>
+        <article>
+            <h1>真夏のひまわり畑</h1>
 
-    <h1>真夏の森</h1>
-    <article>
-        <p>脆弱性とは、コンピュータのOSやソフトウェアにおいて、プログラムの不具合や設計上のミスが原因となって発生した情報セキュリティ上の欠陥のことう。脆弱性は、セキュリティホールとも呼ばれ、脆弱性が残された状態で放置をしていると、外部から攻撃を受けたり、ウイルスの一種である、ワームの拡散にに利用されたりする危険性があり、3割以上の組織が脆弱性による被害を経験しているというデータもあり、インターネットに接続しているコンピュータにおける情報セキュリティ上の大きな問題のひとつになfaっている。</p>
-        <p> 脆弱性はクライアントとサーバ、どちらのコンピュータにおいても重要な問題だが、今回の課題のように、特にインターネットに公開しているサーバの場合には、脆弱性を利用した不正アクセスによって、ホームページが改ざんされたり、他のコンピュータを攻撃するための踏み台に利用されたり、ウイルスの発信源になもなりうる。</p>
-    </article>
-    <footer><small>Copyrohtn all reserved</small></footer>
+            <p>森の工房の隣にある畑は、毎年夏になると満開のひまわりの花で黄色く染まります。ひまわりは「日輪草」とも呼ばれ、太陽に向かって花を咲かせます。大きなひまわりは背丈が２メートルを超え、見ごたえも十分です。畑の周囲は約５キロの散策コースになっていますので、花を見ながら散歩をするのもおすすめです。</p>
 
-</body>
+            <figure class ="photo-left">
+                <img src="sunflower.jpg" alt="青空とのコントラストで黄色いひまわりが眩しく輝いています。">
+            </figure>
 
+            <p>太陽の光をいっぱいに浴びたひまわりの種は、冬の間の野鳥たちの餌になります。また、ひまわり油も抽出し、料理やお菓子作りに活用しています。ひまわりの種を香ばしくローストしたクッキーも人気商品です。</p>
+        </article>
+
+        <footer>
+            <small>Copyright &copy; FOREST STUDIO, all rights reserved.</small>
+        </footer>
+
+    </body>
 </html>
