--- a/news02.html
+++ b/news02.html
@@ -8,7 +8,16 @@
 <body>
 
 <header>
-<h1><img src="logo.png" alt="">FOREST STUDIO</h1>
+<h1><a href="index.html"><img src="logo.png" alt="">FOREST STUDIO</a></h1>
+
+<nav>
+<ul>
+<li><a href="index.html">トップ</a></li>
+<li><a href="news.html">お知らせ</a></li>
+<li><a href="about.html">工房について</a></li>
+<li><a href="contact.html">お問い合わせ</a></li>
+</ul>
+</nav>
 </header>
 
 <article>
