--- a/レスポン/index.html
+++ b/レスポン/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <title>wave</title>
     <meta name="viewport" content="width = device-width">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -31,16 +32,39 @@
     <p><a href="#">空間を彩る多彩なアイテム</a></p>
 
 
-    <article>
-        <a href="post01.html">
-            <figure><img src="img/note.jpg" alt=""></figure>
-            <h2>スケッチが楽しくなるノート</h2>
-        </a>
-    </article>
+    <section>
+        <article>
+            <a href="post01.html">
+                <figure><img src="img/note.jpg" alt=""></figure>
+                <h2>スケッチが楽しくなるノート</h2>
+            </a>
+        </article>
 
+        <article>
+            <a href="post02.html">
+                <figure><img src="img/plant.jpg" alt=""></figure>
+                <h2>緑のアクセントならこれ</h2>
+            </a>
+        </article>
 
+        <article>
+            <a href="post03.html">
+                <figure><img src="img/items.jpg" alt=""></figure>
+                <h2>小物と飾り棚の組み合わせ</h2>
+            </a>
+        </article>
+
+        <article>
+            <a href="post04.html">
+                <figure><img src="img/chair.jpg" alt=""></figure>
+                <h2>居心地のいい部屋にあるもの</h2>
+            </a>
+        </article>
+    </section>
 
 </body>
+
+<footer>@WAVE</footer>
 
 
 </html>
