--- a/レスポン/index.html
+++ b/レスポン/index.html
@@ -29,35 +29,38 @@
     </figure>
 
     <h1>Best place in the World</h1>
-    <p><a href="#">空間を彩る多彩なアイテム</a></p>
+    <p>
+    <img src="img/circle.svg" alt="maru"><br>
+    <a href="#">空間を彩る多彩なアイテム</a></p>
 
 
     <section>
+       <h2>Recent Posts</h2>
         <article>
             <a href="post01.html">
                 <figure><img src="img/note.jpg" alt=""></figure>
-                <h2>スケッチが楽しくなるノート</h2>
+                <h3>スケッチが楽しくなるノート</h3>
             </a>
         </article>
 
         <article>
             <a href="post02.html">
                 <figure><img src="img/plant.jpg" alt=""></figure>
-                <h2>緑のアクセントならこれ</h2>
+                <h3>緑のアクセントならこれ</h3>
             </a>
         </article>
 
         <article>
             <a href="post03.html">
                 <figure><img src="img/items.jpg" alt=""></figure>
-                <h2>小物と飾り棚の組み合わせ</h2>
+                <h3>小物と飾り棚の組み合わせ</h3>
             </a>
         </article>
 
         <article>
             <a href="post04.html">
                 <figure><img src="img/chair.jpg" alt=""></figure>
-                <h2>居心地のいい部屋にあるもの</h2>
+                <h3>居心地のいい部屋にあるもの</h3>
             </a>
         </article>
     </section>
